--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@highcanfly-club/meteo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Our meteo kit",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,8 @@
     "build": "npm run rollup",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified yet\" && exit 0",
-    "get-meteo-icons": "node get-meteo-icons.mjs"
+    "get-meteo-icons": "node get-meteo-icons.mjs",
+    "create-icons":"node --experimental-fetch --loader ts-node/esm iconArray.ts"
   },
   "author": "Ronan Le Meillat",
   "license": "ISC",
@@ -20,8 +21,10 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@rollup/plugin-image": "^3.0.1",
     "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "node-fetch": "^3.3.0",
@@ -30,6 +33,7 @@
     "rollup-plugin-sass": "^1.12.16",
     "rollup-plugin-typescript2": "^0.34.1",
     "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vue": "^3.2.45"
