--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,7 +17,11 @@ jobs:
           node-version: 16
       - run: sed -i -e 's/@highcanfly-club\/meteo/@highcanfly\/meteo/' -e 's/"@highcanfly-club:registry.*,$/"access":"public",/' package.json
       - run: npm i
+        env:
+          API_KEY: ${{secrets.API_KEY}}
       - run: npm run build
+        env:
+          API_KEY: ${{secrets.API_KEY}}
       - run: npm test
 
   publish-npm:
@@ -29,7 +33,9 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: npm i
+        env:
+          API_KEY: ${{secrets.API_KEY}}
       - run: npm publish
         env:
           API_KEY: ${{secrets.API_KEY}}
